--- a/styles/global.css
+++ b/styles/global.css
@@ -1,13 +1,13 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  width: 1100px;
-  margin: 0 auto;
-  font-family: Raleway, sans-serif;
+    width: 1100px;
+    margin: 0 auto;
+    font-family: Raleway, sans-serif;
 }
 
 h1,
@@ -21,18 +21,44 @@ ul,
 ol,
 li,
 blockquote {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 a {
-  color: inherit;
+    color: inherit;
 }
 
 img {
-  width: 100%;
+    width: 100%;
 }
 
 button {
-  font: inherit;
+    font: inherit;
+}
+
+/* Global layout utilities */
+
+/* Взаимное расположение блоков: универсальные внутренние и внешние отступы */
+.section {
+    padding: 60px 0; /* внутренние отступы секции */
+}
+
+.section + .section {
+    margin-top: 60px; /* внешний отступ между соседними секциями */
+}
+
+/* Отступ между хедером и первой секцией */
+.header + .main .section:first-of-type {
+    margin-top: 20px;
+}
+
+/* Фоны блоков: цвет или изображение */
+.section_bg-image {
+    background: url('../images/cover.jpg') center/cover no-repeat;
+    color: #fff;
+}
+
+.section_bg-white {
+    background: #fff; /* базовый светлый фон */
 }
