--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,9 @@
 /* Header */
 .header {
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    align-items: start;
-    padding: 20px 0;
-}
-
-/* Header spacing to first section */
-.header + .main .section:first-of-type {
-    margin-top: 20px;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items: center;
+    padding: 20px 40px;
 }
 
 .header__menu .menu__list {
